# tiny_vm

./: CMakeLists.txt  LICENSE  README.md
Doc/: vol1.txt  vol2.txt  vol3.txt
Src/: main.cpp
Src/FLASM/: example.flick
Src/TVM_64/: ISA.cpp  ISA.h  decoder.cpp  instruction.h  opcode.h  register.cpp  register.h  syscall_table.txt
Src/TinyEdit/: main.cpp  main.h
Src/TinyKernal/: filesystems.cpp  filesystems.h  kernal.cpp  kernal.h  main.cpp  memory.cpp  memory.h  process.cpp  process.h  syscall.cpp  syscall.h
Src/TinyShell/: TinyShell.rc  commands.cpp  commands.h  filesystem.cpp  filesystem.h  main.cpp  parser.cpp  parser.h  resource.h  shell.cpp  shell.h
Src/TinyShell/Commands/: alias.cpp  cat.cpp  cd.cpp  clear.cpp  echo.cpp  exit.cpp  help.cpp  history.cpp  hostname.cpp  ls.cpp  mkdir.cpp  pwd.cpp  rm.cpp  rmdir.cpp  set.cpp  touch.cpp  unalias.cpp  unset.cpp  version.cpp  whoami.cpp
Src/TinyVM/: main.cpp
